--- a/JSUI.html
+++ b/JSUI.html
@@ -1,102 +1,77 @@
-<style>
-html, body, canvas {
-	width: 100%; height: 100%; padding: 0; margin: 0;
-}
-</style>
+<body></body>
 <script>
-// convert into class after i read how to use classes
-var JSUI = new function JSUI() {
 
-	this.STYLESHEET = {}
-	this.ID_REFS = {}
-	this.DOM = []
-	this.FPS = 1000
-	this.DI = null
-	this.CANVAS = null
-	this.CTX = null
-	this.CX = 0
-	this.CY = 0
-	
-	this.displayUI = () => {
-		
-		//display on canvas
-		
-		
-	}
-	
-	this.style = (x) => {
-		Object.keys(x).forEach(v => {
-			if (this.STYLESHEET?.[v]) {
-				Object.assign(this.STYLESHEET, x[v])
-			} else {
-				this.STYLESHEET[v] = x[v]
-			}
-		})
-	}
-	
-	this.importToDom = (x) => {
-		this.DOM = this.DOM.concat(x)
-		return true
-	}
-
-	this.UI_RULES = {
-		append: ['DOM', this.importToDom]
-	}
-	// event chain must return truthy to continue through UI_RULES (.every)
-	this.ui = (...x) => {
-		return this.UI_RULES?.[x[0]].every((v,i) => {
-			var condition = typeof v
-			if (condition === 'string') {
-				// eventually allow more than one option so we can append to more than just DOM, like ID, element references, etc
-				return this.UI_RULES[x[0]][i] == x[i+1]
-			} else if (condition === 'function') {
-				// will cause issues if event chain goes past a function call .... hmm
-				return this.UI_RULES[x[0]][i](x[i+1])
-			}
-		}) ?? null
-	}
-	
-	this.init = () => {
-		this.CANVAS = document.createElement('canvas')
-		this.CANVAS.width = screen.width
-		this.CX = screen.width
-		this.CANVAS.height = screen.height
-		this.CY = screen.width
-		document.body.appendChild(this.CANVAS)
-		this.CTX = this.CANVAS.getContext('2d')
-		this.DI = setInterval(this.displayUI, this.FPS)
-	}
-	
-	window.addEventListener('DOMContentLoaded', this.init)
-	// resize window reset W/H vars
+var P = function (selector, obj = {}) {
+	return Object.keys(obj).length
+		? document.querySelector(selector)
+		: O(document.querySelector(selector), obj, true)
 }
 
-JSUI.style({
-	'#test': {
-		backgroundColor: '#000000',
-		width: '50%',
-		height: '50%',
-		position: 'absolute',
-		position_center: 'center',
-		left: '50%',
-		top: '50%'
-	},
-	'.test': {
-		color: '#ffffff'
-	}
-});
+var U = function (selector, obj = {}) {
+	return Object.keys(obj).length === 0
+		? document.querySelectorAll(selector)
+		: document.querySelectorAll(selector).forEach(x =>
+			O(x, obj, true)
+		)
+}
 
-JSUI.ui('append','DOM',[
-	{
-		e: 'div',
-		id: 'test',
-		className: 'test',
+var O = function (node, obj = {}, h = false) {
+	return Object.keys(obj).reduce((x, c) =>
+		Array.isArray(obj[c])
+			? obj[c].forEach(y => x.appendChild(y)) ?? x
+			: typeof obj[c] === 'object'
+				? null & Object.assign(x[c], obj[c]) || x
+				: Object.assign(x, { [c]: obj[c] })
+	, h ? node : document.createElement(node));
+}
+
+
+document.body.appendChild(
+	O('div', {
+		id: 'main',
+		className: 'body',
 		style: {
-			fontSize: '12px'
+			maxWidth: '800px',
+			width: '100%',
+			margin: '40px',
+			boxSizing: 'border-box',
+			border: '4px solid #444444',
+			textAlign: 'center',
+			fontFamily: 'Arial',
+			margin: '0 auto'
 		},
-		text: 'pretty cool concept huh? you guys should help meh',
-		children: []
-	}
-]);
+		this_name_doesnt_matter_just_the_data_type: [
+			O('h1', {
+				innerHTML: 'Welcome to JSUI',
+				id: 'title',
+				color: '#222222'
+			}),
+			O('p', {
+				innerHTML: 'This library will remain as simple as possible to decrease the amount of characters I have to type while manipulating the DOM with vanilla JavaScript.',
+				style: {
+					color: '#444444'
+				}
+			}),
+			O('button', {
+				innerHTML: 'Click to do stuff',
+				style: {
+					marginBottom: '10px'
+				},
+				onclick: function () {
+					U('div', {
+						style: {
+							color: '#c30010',
+							textDecoration: 'underline'
+						}
+					});
+					P('#title').innerHTML = this.dataset.some_stored_data;
+				},
+				dataset: {
+					some_stored_data: 'Welcome to Vanilla JavaScript',
+				}
+			})
+		]
+	})
+);
 
 </script>
