--- a/JSUI.html
+++ b/JSUI.html
@@ -2,7 +2,7 @@
 <script>
 
 var P = function (selector, obj = {}) {
-	return Object.keys(obj).length
+	return Object.keys(obj).length === 0
 		? document.querySelector(selector)
 		: O(document.querySelector(selector), obj, true)
 }
