--- a/JSUI.html
+++ b/JSUI.html
@@ -65,7 +65,7 @@ document.body.appendChild(
 						}
 					});
 					Select('#title', {
-						innerHTML: this.dataset.some_stored_data
+						innerHTML: this.data
 					}).prepend(
 						Create('div', {
 							style: {
@@ -75,9 +75,7 @@ document.body.appendChild(
 						})
 					);
 				},
-				dataset: {
-					some_stored_data: 'Welcome to Vanilla JavaScript',
-				}
+				data: 'Welcome to Vanilla JavaScript'
 			})
 		]
 	})
